           depletion ratios and the IRSL/OSL ratio.

         • ‘calc_WodaFuchs2008()’: Function to obtain the equivalent
           dose using the approach proposed by Woda and Fuchs, 2008.

         • ‘PSL2Risoe.BINfileData()’: Converts an ‘RLum.Analysis’
           object produced by the function ‘read_PSL2R()’ to an
           ‘Risoe.BINfileData’ object (BETA).

         • ‘read_PSL2R()’: Imports PSL files produced by a SUERC
           portable OSL reader into R (BETA).

  Changes in S4-classes and methods:

         • Method ‘get_RLum’ for ‘RLum.Analysis’-objects did not
           respect ‘.pid’, fixed.

         • ‘plot_RLum’ was not passing the argument ‘sub’, as it was
           fetched by the partial argument matching; fixed.

  Bugfixes and changes:

         • ‘plot_DetPlot()’

             • Correct negative y-axis, the minimum is now the real
               minimum.

         • ‘plot_GrowthCurve()’

             • Reduce number of confusing warning,

             • add new argument ‘mode’ to select the calculation mode
               of the function.  This allows in particular to only fit
               data without calculating a De or calculating a De
               assuming an additive dose reponse curve.

         • ‘read_BIN2R()’

             • If BIN-files are automatically imported the function
               skipped non BIN-files without crashing if it is used in
               combination with the argument ‘pattern’.

  Internals:

         • The internal function converting BIN-file curves to
           RLum.Data.Curve() objects had been optimised and, amongst
           others, now uses a function written using Rcpp to create the
           curve matrix.  The conversion now works ca. 2 times faster,

         • add ‘`[<-]`’ method for ‘RLum.Data.Curve’ objects,

         • a hint on how to cite a function is now added automatically
           to every major function manual page.
